Refactor controller methods for improved readability; update parameter annotations for consistency